feat(header): build topbar

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -219,9 +219,59 @@ a {
 html {
   background-color: #141414; }
 
+body {
+  font-family: Roboto; }
+
 .Header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #FFFFFF;
   background-color: #141414; }
+  .Header-topbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 1180px;
+    margin-top: 60px; }
+  .Header-navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .Header-item {
+    font-weight: 900;
+    margin-right: 60px; }
+    .Header-item:last-child {
+      margin-right: 0; }
+
+.Logo--green .Logo-lastname {
+  fill: #00D6CF; }
+
+.Logo--blue .Logo-lastname {
+  fill: #228DFC; }
+
+.Logo--red .Logo-lastname {
+  fill: #FF303F; }
+
+.Logo--yellow .Logo-lastname {
+  fill: #DEA51C; }
 
 .Slide {
   width: 100vw;
