--- a/sources/styles/layouts/header.scss
+++ b/sources/styles/layouts/header.scss
@@ -1,4 +1,33 @@
 .Header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: $white;
   background-color: $black;
+
+  &-topbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: grid(12);
+    margin-top: $column * .75;
+  }
+
+  &-logo {
+
+  }
+
+  &-navbar {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &-item {
+    font-weight: 900;
+    margin-right: $column * .75;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
