--- a/sources/styles/app.scss
+++ b/sources/styles/app.scss
@@ -14,5 +14,8 @@
 @import 'layouts/footer';
 
 // Modules
+@import 'modules/component';
 @import 'modules/logo';
+@import 'modules/post';
 @import 'modules/slide';
+@import 'modules/text';
