--- a/sources/styles/tools/variables.scss
+++ b/sources/styles/tools/variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $black:  #141414;
+$grey:   #D9D9D9;
 $white:  #FFFFFF;
 $green:  #00D6CF;
 $blue:   #228DFC;
@@ -9,3 +10,8 @@ $yellow: #DEA51C;
 // Grid
 $column: 80px;
 $gutter: 20px;
+
+// Sizes
+$margin-l: 240px;
+$margin-m: 120px;
+$margin-s: 60px;
