--- a/sources/styles/modules/slide.scss
+++ b/sources/styles/modules/slide.scss
@@ -1,4 +1,8 @@
 .Slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   min-height: 100vh;
 
