--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -264,6 +264,26 @@ body {
     .Header-item:last-child {
       margin-right: 0; }
 
+.Footer {
+  position: relative;
+  width: 100%;
+  height: 25rem;
+  margin-top: 16rem;
+  background-color: #141414; }
+  .Footer::before, .Footer::after {
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    height: 16rem; }
+  .Footer::before {
+    left: 0;
+    width: 100%;
+    background-color: #FFFFFF; }
+  .Footer::after {
+    left: 50%;
+    width: .1rem;
+    background-color: #D9D9D9; }
+
 .Component {
   display: -webkit-box;
   display: -ms-flexbox;
