--- a/sources/styles/tools/variables.scss
+++ b/sources/styles/tools/variables.scss
@@ -12,7 +12,8 @@ $column: 80px;
 $gutter: 20px;
 
 // Sizes
-$margin-l: 240px;
+$margin-g: 240px;
+$margin-l: 160px;
 $margin-m: 120px;
 $margin-s: 60px;
 $margin-t: 30px;
