--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -268,13 +268,13 @@ body {
   position: relative;
   width: 100%;
   height: 25rem;
-  margin-top: 16rem;
+  margin-top: 240px;
   background-color: #141414; }
   .Footer::before, .Footer::after {
     content: '';
     position: absolute;
     bottom: 100%;
-    height: 16rem; }
+    height: 240px; }
   .Footer::before {
     left: 0;
     width: 100%;
@@ -283,6 +283,37 @@ body {
     left: 50%;
     width: .1rem;
     background-color: #D9D9D9; }
+
+.Article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 980px; }
+  .Article-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 60px; }
+  .Article-text {
+    width: 100%; }
+  .Article-paragraph {
+    font-size: 2rem;
+    line-height: 1.5em;
+    margin-bottom: 1.5em; }
+    .Article-paragraph:last-child {
+      margin-bottom: 0; }
 
 .Component {
   display: -webkit-box;
@@ -301,16 +332,17 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     width: 100%;
     margin-bottom: 120px; }
     .Component-header:last-child {
       margin-bottom: 0; }
   .Component-title {
     font-size: 3.6rem;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    white-space: pre; }
     .Component-title:last-child {
       margin-bottom: 0; }
     .Component-title--trailed {
@@ -330,6 +362,21 @@ body {
     font-size: 2rem;
     line-height: 1.75em;
     text-align: center; }
+  .Component-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .Component-col {
+    width: 380px; }
 
 .Logo--green .Logo-lastname {
   fill: #00D6CF; }
@@ -370,6 +417,8 @@ body {
     font-size: 2rem;
     line-height: 1.5em;
     margin-bottom: 1.5em; }
+    .Post-paragraph:last-child {
+      margin-bottom: 0; }
 
 .Slide {
   display: -webkit-box;
@@ -386,7 +435,8 @@ body {
   -ms-flex-align: center;
   align-items: center;
   width: 100vw;
-  min-height: 100vh; }
+  min-height: 100vh;
+  padding: 160px 0; }
   .Slide--light {
     background-color: #FFFFFF; }
   .Slide--dark {
