--- a/sources/styles/app.scss
+++ b/sources/styles/app.scss
@@ -14,6 +14,7 @@
 @import 'layouts/footer';
 
 // Modules
+@import 'modules/article';
 @import 'modules/component';
 @import 'modules/logo';
 @import 'modules/post';
