--- a/sources/styles/modules/component.scss
+++ b/sources/styles/modules/component.scss
@@ -6,7 +6,7 @@
   &-header {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     margin-bottom: $margin-m;
 
@@ -18,6 +18,7 @@
   &-title {
     font-size: 3.6rem;
     margin-bottom: $margin-t;
+    white-space: pre;
 
     &:last-child {
       margin-bottom: 0;
@@ -44,5 +45,16 @@
     font-size: 2rem;
     line-height: 1.75em;
     text-align: center;
+  }
+
+  &-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  &-col {
+    width: grid(4);
   }
 }
