test(): write projects in data

--- a/sources/styles/tools/variables.scss
+++ b/sources/styles/tools/variables.scss
@@ -7,8 +7,11 @@ $blue:   #228DFC;
 $red:    #FF303F;
 $yellow: #DEA51C;
 
+// Fonts
+$font: 'Euclid Flex';
+
 // Grid
-$column: 80px;
+$column: 98px;
 $gutter: 20px;
 
 // Sizes
