--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Euclid Flex';
+  font-weight: normal;
+  src: url("../assets/fonts/Euclid-Flex-Regular.otf"); }
+
+@font-face {
+  font-family: 'Euclid Flex';
+  font-weight: 700;
+  src: url("../assets/fonts/Euclid-Flex-Bold.otf"); }
+
+@font-face {
+  font-family: 'Euclid Flex';
+  font-weight: 300;
+  src: url("../assets/fonts/Euclid-Flex-Light.otf"); }
+
 /*
 * http://meyerweb.com/eric/tools/css/reset/
 * v2.0 | 20110126
@@ -221,7 +236,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: Roboto; }
+  font-family: "Euclid Flex"; }
 
 .Header {
   display: -webkit-box;
@@ -248,7 +263,7 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    width: 1180px;
+    width: 1396px;
     margin-top: 60px; }
   .Header-navbar {
     display: -webkit-box;
@@ -295,7 +310,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 980px; }
+  width: 1160px; }
   .Article-title {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -323,7 +338,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 980px; }
+  width: 1160px; }
   .Component-header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -358,7 +373,7 @@ body {
         -webkit-transform: translate(-60px, -50%);
         transform: translate(-60px, -50%); }
   .Component-subtitle {
-    width: 580px;
+    width: 688px;
     font-size: 2rem;
     line-height: 1.75em;
     text-align: center; }
@@ -376,7 +391,7 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between; }
   .Component-col {
-    width: 380px; }
+    width: 452px; }
 
 .Logo--green .Logo-lastname {
   fill: #00D6CF; }
@@ -401,7 +416,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 980px; }
+  width: 1160px; }
   .Post-title {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -410,9 +425,9 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    width: 280px; }
+    width: 334px; }
   .Post-text {
-    width: 680px; }
+    width: 806px; }
   .Post-paragraph {
     font-size: 2rem;
     line-height: 1.5em;
