--- a/sources/styles/layouts/header.scss
+++ b/sources/styles/layouts/header.scss
@@ -27,6 +27,7 @@
   &-item {
     font-size: 1.8rem;
     margin-right: $margin-s;
+    font-weight: 700;
 
     &:last-child {
       margin-right: 0;
