feat(): update integration

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,11 +12,12 @@ $yellow: #DEA51C;
 $font: 'Euclid Flex';
 
 // Grid
-$column: 98px;
+$column: 80px;
 $gutter: 20px;
 
 // Sizes
-$margin-g: 240px;
+$margin-g: 300px;
+$margin-b: 240px;
 $margin-l: 160px;
 $margin-m: 120px;
 $margin-s: 60px;
