feat(): update header and footer

--- a/src/styles/tools/variables.scss
+++ b/src/styles/tools/variables.scss
@@ -24,7 +24,7 @@ $column:  80px;
 $gutter:  20px;
 $lateral: $gutter * 2;
 
-// Sizes
+// Margins
 $margin-g: 300px;
 $margin-b: 240px;
 $margin-l: 160px;
@@ -33,3 +33,8 @@ $margin-r: 90px;
 $margin-s: 60px;
 $margin-t: 30px;
 $margin-n: 15px;
+
+// Sizes
+$back-menu-l: 144px;
+$back-menu-m: 108px;
+$back-menu-s: 72px;
