--- a/src/styles/modules/slide.scss
+++ b/src/styles/modules/slide.scss
@@ -37,8 +37,14 @@
     }
   }
 
+  &:nth-of-type(2n) {
+    background-color: $black;
+    color: $white;
+  }
+
   &:nth-of-type(2n+1) {
     background-color: $white;
+    color: $black;
   }
 
   &:nth-of-type(2n) {
