--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -6,6 +6,10 @@
   width: grid(10);
   margin-bottom: $margin-s;
 
+  @media (min-width: $mq-l) {
+    width: grid(10) * 1.25;
+  }
+
   @media (max-width: grid-media(10)) {
     width: grid(8);
   }
@@ -91,6 +95,10 @@
     font-weight: 300;
     line-height: 1.75em;
 
+    @media (min-width: $mq-l) {
+      width: grid(4) * 1.25;
+    }
+
     @media (max-width: #{grid-media(6)}) {
       width: 100%;
       font-size: 1.8rem;
@@ -98,6 +106,10 @@
 
     &--large {
       width: grid(6);
+
+      @media (min-width: $mq-l) {
+        width: grid(6) * 1.25;
+      }
 
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
@@ -205,6 +217,10 @@
     width: grid(4);
     transform: translateY(-50%);
 
+    @media (min-width: $mq-l) {
+      width: grid(4) * 1.25;
+    }
+
     @media (max-width: #{grid-media(10)}) {
       top: 50%;
     }
@@ -223,6 +239,10 @@
     &--half {
       width: grid(5);
 
+      @media (min-width: $mq-l) {
+        width: grid(5) * 1.25;
+      }
+
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
       }
@@ -230,6 +250,10 @@
 
     &--quarter {
       width: grid(3);
+
+      @media (min-width: $mq-l) {
+        width: grid(3) * 1.25;
+      }
 
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
@@ -318,6 +342,10 @@
         width: calc(#{grid(10)} - 100%);
         height: .1rem;
         background-color: $dark;
+
+        @media (min-width: $mq-l) {
+          width: calc(#{grid(10) * 1.25} - 100%);
+        }
       }
 
       @media (max-width: #{grid-media(10)}) {
@@ -467,6 +495,10 @@
     &--half {
       width: grid(4);
 
+      @media (min-width: $mq-l) {
+        width: grid(4) * 1.25;
+      }
+
       @media (max-width: #{grid-media(10)}) {
         width: 100%;
         margin-bottom: $margin-s;
@@ -475,6 +507,10 @@
 
     &--main {
       width: grid(8);
+
+      @media (min-width: $mq-l) {
+        width: grid(8) * 1.25;
+      }
 
       @media (max-width: #{grid-media(10)}) {
         width: 100%;
@@ -538,21 +574,15 @@
     @media (max-width: #{grid-media(10)}) {
       max-width: grid(8);
     }
-  }
 
-  &-breakpoints {
     @media (max-width: #{grid-media(8)}) {
       max-width: grid(6);
     }
-  }
 
-  &-breakpoints {
     @media (max-width: #{grid-media(6)}) {
       max-width: grid(4);
     }
-  }
 
-  &-breakpoints {
     @media (max-width: #{grid-media(4)}) {
       max-width: grid(3);
     }
@@ -571,6 +601,10 @@
 
     &--partial {
       min-width: grid(6);
+
+      @media (min-width: $mq-l) {
+        width: grid(6) * 1.25;
+      }
     }
   }
 
