--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -6,23 +6,19 @@
   width: grid(10);
   margin-bottom: $margin-s;
 
-  @media (min-width: $mq-l) {
-    width: grid(10) * 1.25;
-  }
-
-  @media (max-width: grid-media(10)) {
+  @media (max-width: #{grid-media(10)}) {
     width: grid(8);
   }
 
-  @media (max-width: grid-media(8)) {
+  @media (max-width: #{grid-media(8)}) {
     width: grid(6);
   }
 
-  @media (max-width: grid-media(6)) {
+  @media (max-width: #{grid-media(6)}) {
     width: grid(4);
   }
 
-  @media (max-width: grid-media(4)) {
+  @media (max-width: #{grid-media(4)}) {
     width: grid(3);
   }
 
@@ -95,10 +91,6 @@
     font-weight: 300;
     line-height: 1.75em;
 
-    @media (min-width: $mq-l) {
-      width: grid(4) * 1.25;
-    }
-
     @media (max-width: #{grid-media(6)}) {
       width: 100%;
       font-size: 1.8rem;
@@ -106,10 +98,6 @@
 
     &--large {
       width: grid(6);
-
-      @media (min-width: $mq-l) {
-        width: grid(6) * 1.25;
-      }
 
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
@@ -217,10 +205,6 @@
     width: grid(4);
     transform: translateY(-50%);
 
-    @media (min-width: $mq-l) {
-      width: grid(4) * 1.25;
-    }
-
     @media (max-width: #{grid-media(10)}) {
       top: 50%;
     }
@@ -239,10 +223,6 @@
     &--half {
       width: grid(5);
 
-      @media (min-width: $mq-l) {
-        width: grid(5) * 1.25;
-      }
-
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
       }
@@ -250,10 +230,6 @@
 
     &--quarter {
       width: grid(3);
-
-      @media (min-width: $mq-l) {
-        width: grid(3) * 1.25;
-      }
 
       @media (max-width: #{grid-media(8)}) {
         width: 100%;
@@ -342,10 +318,6 @@
         width: calc(#{grid(10)} - 100%);
         height: .1rem;
         background-color: $dark;
-
-        @media (min-width: $mq-l) {
-          width: calc(#{grid(10) * 1.25} - 100%);
-        }
       }
 
       @media (max-width: #{grid-media(10)}) {
@@ -495,10 +467,6 @@
     &--half {
       width: grid(4);
 
-      @media (min-width: $mq-l) {
-        width: grid(4) * 1.25;
-      }
-
       @media (max-width: #{grid-media(10)}) {
         width: 100%;
         margin-bottom: $margin-s;
@@ -507,10 +475,6 @@
 
     &--main {
       width: grid(8);
-
-      @media (min-width: $mq-l) {
-        width: grid(8) * 1.25;
-      }
 
       @media (max-width: #{grid-media(10)}) {
         width: 100%;
