feat(): build home page

--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -6,21 +6,7 @@
   width: grid(10);
   margin-bottom: $margin-s;
 
-  @media (max-width: #{grid-media(10)}) {
-    width: grid(8);
-  }
-
-  @media (max-width: #{grid-media(8)}) {
-    width: grid(6);
-  }
-
-  @media (max-width: #{grid-media(6)}) {
-    width: grid(4);
-  }
-
-  @media (max-width: #{grid-media(4)}) {
-    width: grid(3);
-  }
+  @include grid-scale(10);
 
   &:last-of-type {
     margin-bottom: 0;
@@ -535,21 +521,7 @@
     height: auto;
     align-self: center;
 
-    @media (max-width: #{grid-media(10)}) {
-      max-width: grid(8);
-    }
-
-    @media (max-width: #{grid-media(8)}) {
-      max-width: grid(6);
-    }
-
-    @media (max-width: #{grid-media(6)}) {
-      max-width: grid(4);
-    }
-
-    @media (max-width: #{grid-media(4)}) {
-      max-width: grid(3);
-    }
+    @include grid-scale(10);
   }
 
   &-full {
