feat(): set color background on selection

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,8 @@
 @import 'bases/reset';
 @import 'bases/general';
 
+@import 'layouts/page';
+
 @import 'modules/absolute';
 @import 'modules/content';
 @import 'modules/intermediate';
