style(): use easing as global

--- a/src/styles/tools/variables.scss
+++ b/src/styles/tools/variables.scss
@@ -44,3 +44,6 @@ $margin-n: 15px;
 $back-menu-l: 144px;
 $back-menu-m: 108px;
 $back-menu-s: 72px;
+
+// Easing
+$easing: 1s cubic-bezier(0.72, 0, 0.21, 1);
