fea(): build integration of carousel

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,7 @@
 @import 'modules/absolute';
 @import 'modules/content';
 @import 'modules/intermediate';
+@import 'modules/push';
 @import 'modules/shadow';
 @import 'modules/slide';
 @import 'modules/text';
