--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,6 +12,7 @@
 
 @import 'modules/absolute';
 @import 'modules/content';
+@import 'modules/field';
 @import 'modules/intermediate';
 @import 'modules/push';
 @import 'modules/shadow';
