--- a/src/styles/modules/text.scss
+++ b/src/styles/modules/text.scss
@@ -16,6 +16,14 @@
     }
   }
 
+  &--bold {
+    font-weight: 700;
+  }
+
+  &--light {
+    font-weight: 300;
+  }
+
   &--center {
     text-align: center;
   }
