--- a/src/styles/modules/shadow.scss
+++ b/src/styles/modules/shadow.scss
@@ -1,3 +1,7 @@
 .Shadow {
-  box-shadow: 0 0 3rem rgba(0, 0, 0, .07);
+  box-shadow: 0 0 3rem rgba($black, .125);
+
+  &--image {
+    filter: drop-shadow(0 0 3rem rgba($black, .375));
+  }
 }
