fix(cursor): define pointer event

--- a/src/styles/bases/general.scss
+++ b/src/styles/bases/general.scss
@@ -7,9 +7,9 @@ body {
   position: relative;
   font-family: $font;
   color: $white;
-  // cursor: none;
+  cursor: none !important;
 
   * {
-    // cursor: none;
+    cursor: none !important;
   }
 }
