--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -211,18 +211,15 @@
 
   &-post {
     position: absolute;
-    top: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: grid(4);
-    transform: translateY(-50%);
-
-    @media (max-width: #{grid-media(10)}) {
-      top: 50%;
-    }
+    height: 100%;
 
     @media (max-width: #{grid-media(8)}) {
       position: static;
       width: 100%;
-      transform: none;
     }
 
     &--static {
