--- a/src/styles/modules/intermediate.scss
+++ b/src/styles/modules/intermediate.scss
@@ -1,13 +1,11 @@
 .Intermediate {
   position: relative;
-  display: flex;
-  justify-content: center;
-  overflow-x: hidden;
+  z-index: 10;
 
   &::before {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: - $margin-n;
     left: 0;
     z-index: -1;
     width: 100%;
@@ -18,9 +16,22 @@
   @while $i < 100 {
     &--#{$i} {
       &::before {
-        height: $i * 1%;
+        height: calc(#{$i} * 1% + #{$margin-n});
       }
     }
     $i: $i + 5;
+  }
+
+  &-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-bottom: $margin-s;
+    overflow: hidden;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
