fix(): translate banner

--- a/src/styles/modules/slide.scss
+++ b/src/styles/modules/slide.scss
@@ -76,6 +76,14 @@
     overflow: hidden;
   }
 
+  &--exception {
+    justify-content: flex-start;
+
+    > * {
+      margin-top: - $margin-s;
+    }
+  }
+
   &--page {
     padding: $margin-b 0;
 
