--- a/src/styles/modules/slide.scss
+++ b/src/styles/modules/slide.scss
@@ -74,6 +74,13 @@
     height: 100vh;
     min-height: auto;
     overflow: hidden;
+
+    > * {
+      @media (max-width: #{grid-media(8)}) {
+        width: auto;
+        height: 125%;
+      }
+    }
   }
 
   &--exception {
@@ -81,6 +88,14 @@
 
     > * {
       margin-top: - $margin-s;
+
+      @media (max-width: #{grid-media(8)}) {
+        margin-top: - $margin-t;
+      }
+
+      @media (max-width: #{grid-media(6)}) {
+        margin-top: - $margin-n;
+      }
     }
   }
 
