--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -316,6 +316,7 @@
         width: calc(#{grid(10)} - 100%);
         height: .1rem;
         background-color: $dark;
+        transition: width $easing;
       }
 
       @media (max-width: #{grid-media(10)}) {
@@ -371,6 +372,7 @@
       height: 100%;
       background-color: $dark;
       transform: translateY(-#{$margin-l / 2});
+      transition: height $easing;
 
       @media (max-width: #{grid-media(8)}) {
         top: calc(100% - #{$margin-r / 2});
@@ -378,6 +380,18 @@
     }
 
     &:last-child {
+      &::after {
+        height: 0;
+      }
+    }
+
+    &.is-inactive {
+      &:nth-of-type(2n+1) {
+        &::before {
+          width: 0;
+        }
+      }
+
       &::after {
         height: 0;
       }
