--- a/src/styles/modules/exception.scss
+++ b/src/styles/modules/exception.scss
@@ -18,4 +18,28 @@
       margin-top: - $margin-m;
     }
   }
+
+  &--bottomless {
+    padding-bottom: 0 !important;
+  }
+
+  &--bottommore {
+    padding-bottom: $margin-b !important;
+  }
+
+  &--banner {
+    justify-content: flex-start !important;
+
+    > * {
+      margin-top: - $margin-s !important;
+
+      @media (max-width: #{grid-media(8)}) {
+        margin-top: - $margin-t !important;
+      }
+
+      @media (max-width: #{grid-media(6)}) {
+        margin-top: - $margin-n !important;
+      }
+    }
+  }
 }
