feat(): add extra layer to images

--- a/src/styles/modules/absolute.scss
+++ b/src/styles/modules/absolute.scss
@@ -63,4 +63,19 @@
       transform: scale(0.575) translate(-4.375rem, -4rem);
     }
   }
+
+  &--p1 {
+    top: 13%;
+    left: 38.5%;
+  }
+
+  &--p2 {
+    top: 37.5%;
+    left: 5%;
+  }
+
+  &--p3 {
+    top: 16%;
+    left: 21.5%;
+  }
 }
