--- a/src/styles/tools/animations.scss
+++ b/src/styles/tools/animations.scss
@@ -23,3 +23,17 @@
     transform: scaleX(1);
   }
 }
+
+@keyframes mini-scale {
+  0% {
+    transform: scale(.875);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(.875);
+  }
+}
