--- a/assets/styles/tools/animations.scss
+++ b/assets/styles/tools/animations.scss
@@ -55,3 +55,13 @@
     transform: translateY(0);
   }
 }
+
+@keyframes turn-hud {
+  0% {
+    transform: rotateZ(0turn);
+  }
+
+  100% {
+    transform: rotateZ(1turn);
+  }
+}
