--- a/assets/styles/modules/slide.scss
+++ b/assets/styles/modules/slide.scss
@@ -37,6 +37,20 @@
     }
   }
 
+  &:last-of-type {
+    padding-bottom: $margin-l + $margin-b;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: .1rem;
+      height: $margin-b;
+      background-color: $grey;
+    }
+  }
+
   &:nth-of-type(2n) {
     background-color: $black;
     color: $white;
