fix(): replace images by components

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,5 +17,6 @@
 @import 'modules/push';
 @import 'modules/shadow';
 @import 'modules/slide';
+@import 'modules/symbol';
 @import 'modules/text';
 
