--- a/assets/styles/modules/content.scss
+++ b/assets/styles/modules/content.scss
@@ -495,6 +495,7 @@
     display: flex;
     justify-content: space-between;
     align-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     width: 100%;
 
