--- a/assets/styles/bases/general.scss
+++ b/assets/styles/bases/general.scss
@@ -7,4 +7,9 @@ body {
   position: relative;
   font-family: $font;
   color: $white;
+  overflow: hidden;
+
+  &.is-active {
+    overflow: auto;
+  }
 }
