feat(social): add all url

--- a/assets/styles/modules/text.scss
+++ b/assets/styles/modules/text.scss
@@ -55,4 +55,50 @@
   &--yellow {
     color: $yellow;
   }
+
+  &-hover {
+    transition: color $easing-duration;
+
+    &--black {
+      &:hover {
+        color: $black;
+      }
+    }
+
+    &--grey {
+      &:hover {
+        color: $grey;
+      }
+    }
+
+    &--white {
+      &:hover {
+        color: $white;
+      }
+    }
+
+    &--green {
+      &:hover {
+        color: $green;
+      }
+    }
+
+    &--blue {
+      &:hover {
+        color: $blue;
+      }
+    }
+
+    &--red {
+      &:hover {
+        color: $red;
+      }
+    }
+
+    &--yellow {
+      &:hover {
+        color: $yellow;
+      }
+    }
+  }
 }
