--- a/assets/styles/tools/variables.scss
+++ b/assets/styles/tools/variables.scss
@@ -17,7 +17,7 @@ $colors: (
 );
 
 // Fonts
-$font: 'Euclid Flex';
+$font: 'Euclid Flex', sans-serif;
 $charters: (
   'CircularStd-Bold',
   'CircularStd-Book',
